; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_leds.c_b43_leds_unregister.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_leds.c_b43_leds_unregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b43_wl = type { %struct.b43_leds }
%struct.b43_leds = type { i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @b43_leds_unregister(%struct.b43_wl* %0) #0 {
  %2 = alloca %struct.b43_wl*, align 8
  %3 = alloca %struct.b43_leds*, align 8
  store %struct.b43_wl* %0, %struct.b43_wl** %2, align 8
  %4 = load %struct.b43_wl*, %struct.b43_wl** %2, align 8
  %5 = getelementptr inbounds %struct.b43_wl, %struct.b43_wl* %4, i32 0, i32 0
  store %struct.b43_leds* %5, %struct.b43_leds** %3, align 8
  %6 = load %struct.b43_leds*, %struct.b43_leds** %3, align 8
  %7 = getelementptr inbounds %struct.b43_leds, %struct.b43_leds* %6, i32 0, i32 3
  %8 = call i32 @b43_unregister_led(i32* %7)
  %9 = load %struct.b43_leds*, %struct.b43_leds** %3, align 8
  %10 = getelementptr inbounds %struct.b43_leds, %struct.b43_leds* %9, i32 0, i32 2
  %11 = call i32 @b43_unregister_led(i32* %10)
  %12 = load %struct.b43_leds*, %struct.b43_leds** %3, align 8
  %13 = getelementptr inbounds %struct.b43_leds, %struct.b43_leds* %12, i32 0, i32 1
  %14 = call i32 @b43_unregister_led(i32* %13)
  %15 = load %struct.b43_leds*, %struct.b43_leds** %3, align 8
  %16 = getelementptr inbounds %struct.b43_leds, %struct.b43_leds* %15, i32 0, i32 0
  %17 = call i32 @b43_unregister_led(i32* %16)
  ret void
}

declare dso_local i32 @b43_unregister_led(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
